--- a/src/styles/TodoList.css
+++ b/src/styles/TodoList.css
@@ -7,7 +7,7 @@
     
     width: 70%;
     
-    max-height: 70px;
+    max-height: 60px;
     border-radius: 20px;
     margin: 0 auto;
     padding: 0;
@@ -22,11 +22,24 @@
 .list{
     background-color: var(--tertiaryLightBlue);
     align-items: center;
-    width: 40%;
+    min-width: 40%;
     border-radius: 20px;
-    margin: 5%;
+    margin: 2% 4%;
     padding: 10px;
+    filter: drop-shadow(10px 10px 10px var(--primaryDarkBlue));
 
     font-family: adolfine;
-    font-style: bold;
+}
+
+.list button {
+    display: inline-block;
+    min-height: 41px;
+    min-width: 41px;
+    border: none;
+    margin: 10px;
+    border-radius: 50%;
+    
+    font-size: 30px;
+    color: var(--secondaryLightBlue);
+    background-color: var(--secondaryDarkBlue);
 }
