--- a/src/App.css
+++ b/src/App.css
@@ -44,12 +44,6 @@
     initial-value: #ed75b9;
 }
 
-h1 {
-    color: var(--primaryDarkBlue);
-    font-family: adolfine;
-    text-align: center;
-}
-
 body, html{
     background-color: var(--primaryLightBlue);
 }
@@ -62,7 +56,17 @@ body, html{
     }
 }
 
+
+header{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
 h1{
+    color: var(--primaryDarkBlue);
+    font-family: adolfine;
+    text-align: center;
     background-color: var(--secondaryLightBlue);
     
     width: 330px;
@@ -70,6 +74,6 @@ h1{
     max-height: 60px;
 
     border-radius: 20px;
-    margin: 20px auto 0 auto;
+    margin-top: 20px;
     padding-top: 10px;
 }
