--- a/src/styles/Checkbox.css
+++ b/src/styles/Checkbox.css
@@ -16,7 +16,7 @@
     background: var(--primaryDarkBlue);
 }
 
-input[type="checkbox"] {
+.checkboxLabel input[type="checkbox"] {
     clip: rect(0 0 0 0);
     clip-path: inset(50%);
     height: 1px;
